<resources>
    <string name="app_name">AppQuiz</string>
    <string name="signin">SignIn</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="didn_t_have_account">Didn\'t have account?</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="log_out">Log Out</string>
</resources>
