<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TV"
        android:text="@string/sign_up"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Email"
        android:hint="@string/email_or_phone_number"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background"
        android:textAllCaps="false"
        android:layout_below="@+id/TV"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background"
        android:textAllCaps="false"
        android:layout_below="@+id/Email"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint="@string/name"
        android:inputType="number"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background"
        android:textAllCaps="false"
        android:layout_below="@+id/pass"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:hint="@string/address"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background"
        android:textAllCaps="false"
        android:layout_below="@+id/name"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cnic"
        android:hint="CNIC"
        android:inputType="number"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background"
        android:textAllCaps="false"
        android:layout_below="@+id/address"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/city"
        android:hint="@string/city"
        android:inputType="textPassword"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background"
        android:textAllCaps="false"
        android:layout_below="@+id/cnic"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LoginBT"
        android:background="@drawable/backgroundbt"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/sign_up"
        android:textColor="#ffff"
        android:layout_below="@id/city"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />
    <View style="@style/Divider.Horizontal"
        android:layout_below="@id/LoginBT"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/view"
        />
    <TextView
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:id="@+id/TV3"
        android:layout_below="@id/view"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_account"
        android:textSize="15dp"
        android:layout_marginLeft="30dp"
        />
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/TV4"
        android:layout_below="@id/view"
        android:layout_toRightOf="@+id/TV3"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in"
        android:textSize="15dp"
        android:textColor="@color/colorPrimary"
        />

</RelativeLayout>